--- a/.gitignore
+++ b/.gitignore
@@ -5451,3 +5451,4 @@
 4649647/templates/svg/accusoft.svg
 4649647/templates/svg/accessible-icon.svg
 4649647/templates/svg/500px.svg
+villaride/video/1.mp4
