--- a/.gitignore
+++ b/.gitignore
@@ -5452,3 +5452,25 @@
 4649647/templates/svg/accessible-icon.svg
 4649647/templates/svg/500px.svg
 villaride/video/1.mp4
+villaride/video/4-1.jpg
+villaride/video/4-1.mp4
+villaride/video/4-2.jpg
+villaride/video/4-2.mp4
+villaride/video/4-3.jpg
+villaride/video/4-3.mp4
+villaride/video/4-4.jpg
+villaride/video/4-4.mp4
+villaride/video/4-5.jpg
+villaride/video/4-5.mp4
+villaride/video/8-1.jpg
+villaride/video/8-1.mp4
+villaride/video/8-2.jpg
+villaride/video/8-2.mp4
+villaride/video/8-3.jpg
+villaride/video/8-3.mp4
+villaride/video/8-4.jpg
+villaride/video/8-4.mp4
+villaride/video/8-5.jpg
+villaride/video/8-5.mp4
+villaride/video/8-6.jpg
+villaride/video/8-6.mp4
