--- a/.gitignore
+++ b/.gitignore
@@ -5474,3 +5474,12 @@ villaride/video/8-5.jpg
 villaride/video/8-5.mp4
 villaride/video/8-6.jpg
 villaride/video/8-6.mp4
+villaride/video/7-2-hd.mp4
+villaride/video/7-3-hd.mp4
+villaride/video/7-4-hd.mp4
+villaride/video/7-5-hd.mp4
+villaride/video/8-1-hd.mp4
+villaride/video/8-2-hd.mp4
+villaride/video/8-4-hd.mp4
+villaride/video/8-5-hd.mp4
+villaride/video/7-1-hd.mp4
