--- a/.gitignore
+++ b/.gitignore
@@ -5483,3 +5483,68 @@ villaride/video/8-2-hd.mp4
 villaride/video/8-4-hd.mp4
 villaride/video/8-5-hd.mp4
 villaride/video/7-1-hd.mp4
+uyut/fonts/museo-sans/demo.html
+uyut/fonts/museo-sans/MuseoSansCyrl-100.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-100.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-100.woff
+uyut/fonts/museo-sans/MuseoSansCyrl-100Italic.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-100Italic.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-100Italic.woff
+uyut/fonts/museo-sans/MuseoSansCyrl-300.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-300.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-300.woff
+uyut/fonts/museo-sans/MuseoSansCyrl-300Italic.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-300Italic.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-300Italic.woff
+uyut/fonts/museo-sans/MuseoSansCyrl-500.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-500.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-500.woff
+uyut/fonts/museo-sans/MuseoSansCyrl-500Italic.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-500Italic.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-500Italic.woff
+uyut/fonts/museo-sans/MuseoSansCyrl-700.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-700.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-700.woff
+uyut/fonts/museo-sans/MuseoSansCyrl-700Italic.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-700Italic.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-700Italic.woff
+uyut/fonts/museo-sans/MuseoSansCyrl-900.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-900.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-900.woff
+uyut/fonts/museo-sans/MuseoSansCyrl-900Italic.eot
+uyut/fonts/museo-sans/MuseoSansCyrl-900Italic.ttf
+uyut/fonts/museo-sans/MuseoSansCyrl-900Italic.woff
+uyut/fonts/museo-sans/stylesheet.css
+uyut/image/arrow-double.svg
+uyut/image/block-1-bg.jpg
+uyut/image/block-1-form-bg.png
+uyut/image/block-1-image-2.png
+uyut/image/block-1-image.png
+uyut/image/block-2-card-1.jpg
+uyut/image/block-2-card-10.jpg
+uyut/image/block-2-card-11.jpg
+uyut/image/block-2-card-12.jpg
+uyut/image/block-2-card-13.jpg
+uyut/image/block-2-card-14.jpg
+uyut/image/block-2-card-15.jpg
+uyut/image/block-2-card-16.jpg
+uyut/image/block-2-card-2.jpg
+uyut/image/block-2-card-3.jpg
+uyut/image/block-2-card-4.jpg
+uyut/image/block-2-card-5.svg
+uyut/image/block-2-card-6.jpg
+uyut/image/block-2-card-7.jpg
+uyut/image/block-2-card-8.jpg
+uyut/image/block-2-card-9.jpg
+uyut/image/block-3-bg.jpg
+uyut/image/block-3-image-1.png
+uyut/image/block-3-image-2.png
+uyut/image/chevron-next.svg
+uyut/image/email.svg
+uyut/image/logo.png
+uyut/image/logo.svg
+uyut/image/pen.svg
+uyut/image/pointer.svg
+uyut/image/star.svg
+uyut/image/tel.svg
+uyut/image/time.svg
