--- a/.gitignore
+++ b/.gitignore
@@ -7270,3 +7270,5 @@ villaride/image/4-4.jpg
 *.jpg
 villaride/image/block-1-form.png
 villaride/image/block-1-title.png
+uyut/image/block-12-2.png
+uyut/image/block-14-hover.png
