--- a/.gitignore
+++ b/.gitignore
@@ -8983,3 +8983,7 @@ villaride/image/4-6.jpg
 villaride/image/4-7.jpg
 villaride/image/4-8.jpg
 *.jpg
+villaride/image/bg-modal.jpg
+villaride/image/bg-modal.png
+villaride/image/bg-modal.jpg
+villaride/image/bg-modal.jpg
